# play-rs

./: Cargo.toml  README.md
data/: primal_ten.json  sets.csv
examples/: fizz-buzz.rs
src/: delay.rs  fizz_buzz.rs  lib.rs  main.rs  primal.rs  primes.rs  simple_error.rs  tpl_vs_dyn.rs
src/old/: play.rs
src/primes/: cache.rs  mod.rs  primes.rs  sieve.rs
