[package]
name = "play-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["std"] }


uuid = { version = "1.5", features = ["v4"] }
